# rust-ai

./: README.md
.devcontainer/: devcontainer.json
llamastack/: Cargo.toml
llamastack/src/: main.rs
ollama/: Cargo.toml
ollama/src/: main.rs
