[package]
name = "llamastack"
version = "0.1.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.11", features = ["json", "gzip", "stream"], default-features = false }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
